# opencode-chat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  deny.toml  gallery.html  index.html
.claude/skills/bridge-write/: SKILL.md
.claude/skills/dev-diagnose/: SKILL.md
.claude/skills/dev-start/: SKILL.md
.claude/skills/dev-wrap/: SKILL.md
.claude/skills/doc-write/: SKILL.md
.claude/skills/render-write/: SKILL.md
.claude/skills/replay-debug/: SKILL.md
.claude/skills/rust-write/: SKILL.md
.claude/skills/test-run/: SKILL.md
.claude/skills/test-write/: SKILL.md
.claude/skills/weekly-summary/: SKILL.md
.github/workflows/: pages.yml
assets/: announcer-DQUuDfyE.js  boot-Bfd1wDNf.js  chat-CxRWw1E8.js  chat-input-CDyUGpCJ.js  copy-button-CE6UyqNK.js  debug-panel-DzykNQ2O.js  dock-q0_usG0n.js  embed-overlay-CS5y01LF.js  find-bar-BQX65CJo.js  image-loader-DEJYb4Ur.js  infinite_chat_wasm_bg-Cy_JI15k.wasm  main-C66WK-k9.js  math-fonts-CSpAQE3e.js  replay-Cvqaq-72.js  replay-config-BGpffVO3.js  scenes-BXUVMCrq.js  sse-client-UdbDDm5a.js  style-panel-B4f0Zw69.js  text-layer-J5KnxGEh.js
cases/: README.md  c01-plaintext.json  c02-bold-close.json  c03-inline-code.json  c04-list.json  c05-fence.json  c06-all.json  c07-setext.json  c08-quote-alert.json  c09-mixed-long.json  c10-cjk.json  g-choreo.json  g-md-all.json  g-mixed.json  g-nest.json  g-table.json  g-tasks.json  n-all.json  reel.json  showcase.json
chat/: index.html
chats/: showcase-full.json
crates/core/: Cargo.toml  README.md
crates/core/src/: app.rs  boxlayout.rs  camera.rs  content.rs  embed.rs  frame.rs  fsm.rs  highlight.rs  lib.rs  math.rs  nodes.rs  partrender.rs  partspecific.rs  protocol.rs  record.rs  resilience.rs  reveal.rs  seam.rs  shaderbox.rs  smoother.rs  spatial.rs  store.rs  support.rs  theme.rs
crates/core/src/snapshots/: infinite_chat_core__partspecific__tests__compaction.snap  infinite_chat_core__partspecific__tests__reasoning.snap  infinite_chat_core__partspecific__tests__tool_bash_done.snap  infinite_chat_core__partspecific__tests__tool_edit_diff.snap  infinite_chat_core__partspecific__tests__tool_running.snap
crates/core/tests/: dump_katex_charset.rs  replay.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: atlas.rs  backend.rs  effects.rs  lib.rs  morph.rs  scene.rs
crates/render/src/shaders/: glyph.wgsl  panel.wgsl
crates/render/src/shaders/base/: glyph.wgsl  panel.wgsl  rect.wgsl
crates/render/src/shaders/markdown/: rule.wgsl  rule_cat.wgsl  widget.wgsl
crates/render/src/shaders/shaderbox/: raymarch.wgsl
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: clock.rs  glyph_bridge.rs  layout_bridge.rs  lib.rs  observe.rs  transport.rs
fonts/: ascii-msdf.json  katex-msdf.json
replays/: longsession-10k.json
scripts/: README.md  api-paths.mjs  bake-katex-msdf.mjs  chat.mjs  dev-web.mjs  gen-gallery.mjs  gen-showcase.mjs  record-chat.mjs  serve.mjs
scripts/katex/charset/: Main-Regular.txt  Math-Italic.txt  Size1-Regular.txt  Size2-Regular.txt  Size3-Regular.txt  manifest.txt
spec/: ARCHITECTURE-CURRENT.md  README.md  architecture.md  dev-practices.md  testing-and-benchmark.md
spec/decision/: 0000-overview.md  0001-canvas-architecture.md  0002-event-driven-pipeline.md  0003-fault-tolerance.md  0004-markdown-and-embeds.md  0005-turn-aggregation-and-settlement.md  0006-inline-tags-and-extensibility.md  0007-rich-media-embeds.md  0008-multi-instance-sync.md  0009-text-rendering-engine.md  0010-markdown-parsing-strategy.md  0011-gpu-text-as-sdf-primitive.md  0013-math-latex-rendering.md  0014-table-two-pass-layout.md  0015-glyph-source-fallback.md  0016-streaming-morph-render-model.md  0017-markdown-streaming-landing.md  0018-sdf-panel-decoration-primitive.md  0019-reveal-gating-and-choreography.md  0020-content-node-identity-model.md  0021-js-rust-boundary-and-configurable-render.md  0024-3d-camera-and-raymarch-sdf.md  0025-sdf-node-animation-system.md  0026-modular-shader-organization.md  0028-shaderbox-primitive.md  0029-session-virtualization-and-glyph-working-set.md  0030-text-copy-selection-and-a11y-mirror.md
spec/design/: thinking.md
spec/diagnose/: ISSUE_INDEX.md  README.md
spec/knowledge/: opencode.md
spec/plan/: deck-icons.frag  phase1_progress.md  plan1-build-guide.md  plan1-minimal-prototype.md  plan10-sdf-animation-system.md  plan11-modular-shader-and-markdown.md  plan12-math-sdf-first-class.md  plan12_progress.md  plan13-chat-box-layout.md  plan14-image-embed.md  plan14_progress.md  plan15-code-block-viewport.md  plan15_progress.md  plan16-shaderbox.md  plan16_progress.md  plan2-usable-chat.md  plan21-text-copy-and-selection.md  plan22-opencode-events-and-fsm.md  plan23-part-render-implementation.md  plan25-chat-scripted-showcase.md  plan26-chat-iteration-structural-readiness.md  plan2_progress.md  plan5-streaming-markdown.md  plan5_progress.md  plan6-markdown-all-sdf.md  plan8-reveal-cadence.md  plan9-recursive-reveal-tree.md  plan9_progress.md
spec/research/: animation-system-survey.md  image-rendering-warp-jcode.md  industry-llm-chat-rendering.md  markdown-parser-comparison.md  math-latex-sdf-rendering.md  onedraw-analysis.md  reveal-rhythm.md  sdf-animation-system.md  shader-code-organization-survey.md
themes/: ocean.json
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/bench-results/: plan18-before-browser.csv
web/chat/: index.html
web/public/: gallery.html
web/public/cases/: g-md-all.json  showcase.json
web/src/: announcer.test.ts  announcer.ts  boot.ts  chat-input.ts  copy-button.ts  debug-panel.ts  dock.ts  find-bar.ts  glyph-raster.ts  image-loader.ts  layout-bridge.ts  main.ts  pretext-bridge.ts  sse-client.test.ts  sse-client.ts  style-config.ts  style-panel.ts  text-layer.ts  wasm-pkg.d.ts
web/tests/: a11y.spec.ts  bench.spec.ts  chat-route.spec.ts  copy.spec.ts  dock.spec.ts  find.spec.ts  helpers.ts  render-fallback.spec.ts  selection.spec.ts  text-layer-virtualized.spec.ts  theme.spec.ts  visual.spec.ts
(+9 files in other folders)
