[package]
name = "opencode-chat-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-segmentation = "1"         # grapheme 分段(smoother / native stub LayoutEngine)
# markdown 解析用 jcode 的后端中立文档模型(plan2 H1 指定;wasm 安全,纯 pulldown-cmark+unicode-width)
jcode-render-core = { path = "../../vendor/jcode-render-core" }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
