[package]
name = "infinite-chat-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-segmentation = "1"         # grapheme 分段(smoother / native stub LayoutEngine)
# markdown 解析用 jcode 的后端中立文档模型(plan2 H1 指定;wasm 安全,纯 pulldown-cmark+unicode-width)
jcode-render-core = { path = "../../vendor/jcode-render-core" }
# 数学排版(0013 §8 / Plan 12):TeX → DisplayList(GlyphPath/Line/Rect/Path,绝对 em 坐标)
# → 映射 FrameGlyph/FrameRect(+Path 相位④)。纯 Rust、WASM 友好。相位① 开始使用。
ratex-parser = { workspace = true }
ratex-layout = { workspace = true }
ratex-types = { workspace = true }
# chat 级盒子布局(Plan 13 / 0023):Flexbox 盒子树(角色左右分栏 + 内容嵌套)。纯 Rust、wasm 友好
# (无 wasm-bindgen/web-sys/wgpu,守 CR1);只开 flexbox(grid 暂不开,省体积)。
taffy = { version = "0.7", default-features = false, features = ["std", "taffy_tree", "flexbox", "block_layout"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
